--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <!-- <script src="./q3.js"></script> -->
     <!-- <script src="./q6.js"></script> -->
     <!-- <script src="./q7.js"></script> -->
-    <script src="./q10.js"></script>
+    <!-- <script src="./q10.js"></script> -->
+    <script src="./q13.js"></script>
 </head>
 <body>
     <input id="input" type="text">
     <input id="input2" type="text">
+    <button type="button" onclick="display()">Display</button>
+    <button type="button" onclick="add()">Add</button>
     <div id="output"></div>
-    <button type="button" onclick="run()">run</button>
 </body>
 </html>
