--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <!-- <script src="./q6.js"></script> -->
     <!-- <script src="./q7.js"></script> -->
     <!-- <script src="./q10.js"></script> -->
-    <script src="./q13.js"></script>
+    <!-- <script src="./q13.js"></script> -->
+    <script src="./q16.js"></script>
 </head>
 <body>
     <input id="input" type="text">
     <input id="input2" type="text">
-    <button type="button" onclick="display()">Display</button>
-    <button type="button" onclick="add()">Add</button>
+    <button type="button" onclick="run()">Display</button>
+    <!-- the button below for q13 only! -->
+    <!-- <button type="button" onclick="add()">Add</button> -->
     <div id="output"></div>
 </body>
 </html>
